--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -820,6 +820,12 @@ header {
   max-width: 100%;
   overflow: hidden;
 }
+#blog .tabgroup ul li video {
+  float: left;
+  margin-right: 30px;
+  max-width: 100%;
+  overflow: hidden;
+}
 #blog .tabgroup ul li .text-content {
   display: inline;
 }
